# BankSystem

./: finance.db  main.py  pyproject.toml
app/: database.py  dependency.py  models.py  schemas.py
app/api/v1/: operations.py  users.py  wallets.py
app/repository/: users.py  wallets.py
app/service/: operations.py  users.py  wallets.py
